one sweep correct

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -49,6 +49,8 @@ file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 
+#execute_process(COMMAND cython --cplus _dmrg.pyx)
+
 link_directories(
   ${BLOCKDIR}/newmat10
   ${BLOCKDIR})
